--- a/frontend/src/app/components/AdminStaffUserTable.module.css
+++ b/frontend/src/app/components/AdminStaffUserTable.module.css
@@ -191,6 +191,15 @@
   line-height: normal;
 }
 
+.tableItems {
+  border-left: 1px solid var(--Stroke-2, #d0d7de);
+  border-right: 1px solid var(--Stroke-2, #d0d7de);
+  border-bottom: 1px solid var(--Stroke-2, #d0d7de);
+  border-radius: 0px 0px var(--Spacing-s, 8px) var(--Spacing-s, 8px);
+  width: 1024px;
+  background: #fff;
+}
+
 .pageSelect {
   display: flex;
   align-items: center;
