--- a/frontend/src/app/announcements/page.module.css
+++ b/frontend/src/app/announcements/page.module.css
@@ -51,10 +51,10 @@
   height: 38px;
 }
 
-.button {
-  margin-top: 40px;
+.spacing1 {
+  margin-top: 28px;
 }
 
-.spacing {
+.spacing2 {
   margin-top: 80px;
 }
