--- a/frontend/src/app/components/AnnouncementTable.module.css
+++ b/frontend/src/app/components/AnnouncementTable.module.css
@@ -6,7 +6,7 @@
 }
 
 .header {
-  font-family: Albert Sans;
+  font-family: "Albert Sans";
   font-weight: 500;
   font-size: 24px;
   line-height: 100%;
