--- a/frontend/src/app/components/AnnouncementTableItem.module.css
+++ b/frontend/src/app/components/AnnouncementTableItem.module.css
@@ -10,7 +10,7 @@
   color: #4d5358;
   height: 64px;
 
-  font-family: Albert Sans;
+  font-family: "Albert Sans";
   font-weight: 500;
   font-size: 14px;
   line-height: 100%;
