--- a/frontend/src/app/components/VeteranList.module.css
+++ b/frontend/src/app/components/VeteranList.module.css
@@ -8,7 +8,7 @@
 }
 
 .title {
-  font-family: Albert Sans;
+  font-family: "Albert Sans";
   font-weight: 500;
   font-size: 24px;
   line-height: 28.8px;
