implemented assigning users on the admin dashboard and filter/sortby frontend.

--- a/frontend/src/app/components/AdminStaffUserItem.module.css
+++ b/frontend/src/app/components/AdminStaffUserItem.module.css
@@ -125,3 +125,13 @@
 .unassignedText {
   color: var(--Danger-Emphasis, #b80037);
 }
+
+.addUserIcon {
+  height: 28px;
+  border-radius: 15px;
+  background: var(--Primary, #057e6f);
+  padding: 5px;
+  position: absolute;
+  right: 18%;
+  z-index: 0;
+}
