--- a/frontend/src/app/components/ChangeProgramDialog.module.css
+++ b/frontend/src/app/components/ChangeProgramDialog.module.css
@@ -7,7 +7,8 @@
   box-shadow:
     0 10px 15px -3px rgba(0, 0, 0, 0.1),
     0 4px 6px -2px rgba(0, 0, 0, 0.05); /* shadow-lg */
-  width: 20rem; /* w-80 */
+  width: 500px; /* w-80 */
+  height: auto;
 }
 
 .title {
