--- a/frontend/src/app/components/ChangeRoleDialog.module.css
+++ b/frontend/src/app/components/ChangeRoleDialog.module.css
@@ -7,11 +7,17 @@
   box-shadow:
     0 10px 15px -3px rgba(0, 0, 0, 0.1),
     0 4px 6px -2px rgba(0, 0, 0, 0.05); /* shadow-lg */
-  width: 40rem; /* w-80 */
+  width: 600;
+  height: 257;
+  gap: var(--Spacing-md 10px);
+  border-radius: var(--Spacing-s 10px);
+  padding: var(--Spacing-2xl 10px);
+  top: 322px;
+  left: 400px;
 }
 
 .title {
-  font-size: 1.25rem; /* text-xl */
+  font-size: 24px; /* text-xl */
   margin-bottom: 1rem; /* mb-4 */
 }
 
