--- a/frontend/src/app/components/ReportDropdown.module.css
+++ b/frontend/src/app/components/ReportDropdown.module.css
@@ -65,6 +65,9 @@
   font-style: normal;
   font-weight: 500;
   line-height: normal;
+
+  z-index: 1000;
+  position: absolute;
 }
 
 .dropdownItem {
