--- a/frontend/src/app/components/AdminStaffUserTable.module.css
+++ b/frontend/src/app/components/AdminStaffUserTable.module.css
@@ -260,7 +260,7 @@
 }
 
 .messageContainer {
-  /* animation: fadeOut 5s forwards; */
+  animation: fadeOut 5s forwards;
   display: flex;
   margin: auto;
   padding: 8px;
