--- a/frontend/src/app/components/UserList.module.css
+++ b/frontend/src/app/components/UserList.module.css
@@ -122,3 +122,42 @@
   font-weight: 500;
   line-height: normal;
 }
+
+.userList .programUnassignedWrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 10px;
+  align-items: center;
+  margin-left: 70px;
+  text-align: center;
+  margin: 0 auto;
+}
+
+.progUnassignedHeader {
+  font-size: 16px;
+  color: #60696f;
+  font-weight: 500;
+}
+
+.progUnassingedText {
+  font-size: 13px;
+  color: #60696f;
+  font-weight: 400;
+}
+
+.progUnassignedButton {
+  width: 135px;
+  height: 33px;
+  gap: 10px;
+  border-radius: 8px;
+  padding-top: 8px;
+  padding-right: var(--Spacing-sm 8px);
+  padding-bottom: 8px;
+  padding-left: var(--Spacing-sm 8px);
+  background-color: #057e6f;
+  color: white;
+  font-size: 14px;
+  font-weight: 500;
+  cursor: pointer;
+}
