--- a/frontend/src/app/components/ReportTableItem.module.css
+++ b/frontend/src/app/components/ReportTableItem.module.css
@@ -1,13 +1,13 @@
 .container {
   display: flex;
-  align-items: flex-start;
+  align-items: center;
   align-self: stretch;
 
   border-top: 1px solid var(--Stroke-1, #edf1f5);
   background: var(--Background-1, #fff);
   border-bottom-left-radius: 8px;
   border-bottom-right-radius: 8px;
-  color: #4d5358;
+  /* color: #4d5358; */
   height: 64px;
 
   font-family: "Albert Sans";
@@ -25,7 +25,6 @@
   align-items: center;
   gap: 10px;
   align-self: stretch;
-  border-radius: 0px 0px 0px var(--Spacing-s, 8px);
 }
 
 .reportee {
@@ -35,15 +34,58 @@
   align-items: center;
   gap: 10px;
   align-self: stretch;
-  border-radius: 0px 0px var(--Spacing-s, 8px) 0px;
 }
 
 .situation {
   display: flex;
-  width: 700px;
   padding: var(--Spacing-sm, 16px) 24px;
   align-items: center;
   gap: 10px;
+  flex: 1 0 0;
   align-self: stretch;
-  border-radius: 0px 0px var(--Spacing-s, 8px) 0px;
+}
+
+.statusPending {
+  display: flex;
+  align-items: center;
+  width: 136px;
+  padding: var(--Spacing-sm, 16px) 24px;
+  box-sizing: border-box;
+}
+
+.statusPending span {
+  display: flex;
+  width: 88px;
+  height: 29px;
+  padding: 4px 12px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  border-radius: 4px;
+  border: 1px solid var(--Warning-Emphasis, #f9a825);
+  background: var(--Warning-Muted, rgba(249, 168, 37, 0.1));
+  color: var(--Warning-Emphasis, #f9a825);
+}
+
+.statusResolved {
+  display: flex;
+  align-items: center;
+  width: 136px;
+  padding: var(--Spacing-sm, 16px) 24px;
+  box-sizing: border-box;
+}
+
+.statusResolved span {
+  display: flex;
+  width: 88px;
+  height: 29px;
+  padding: 4px 12px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  border-radius: 4px;
+  border-radius: 4px;
+  border: 1px solid var(--Success-Emphasis, #1a8538);
+  background: var(--Success-Muted, rgba(26, 133, 56, 0.1));
+  color: var(--Success-Emphasis, #1a8538);
 }
