--- a/frontend/src/app/report/page.module.css
+++ b/frontend/src/app/report/page.module.css
@@ -1,24 +1,46 @@
-.page {
+.container {
   height: 100%;
-  width: 100%;
-  padding-left: 188px;
-  padding-right: 156px;
-  padding-top: 94px;
-  padding-bottom: 57px;
+  background: var(--Neutral-Base-White, #fafafa);
+  min-height: 100vh;
+  width: 100vw;
 }
 
-.title {
+.page {
+  display: flex;
+  width: 100%;
+  padding: var(--Spacing-4xl, 80px) var(--Spacing-3xl, 64px);
+  justify-content: center;
+  align-items: flex-start;
+  flex-shrink: 0;
+}
+
+.frame {
+  display: flex;
+  max-width: 1024px;
+  flex-direction: column;
+  align-items: flex-start;
+  flex: 1 0 0;
+  top: 94px;
+  left: 156px;
+  padding-bottom: 100px;
+}
+
+.header {
+  color: var(--Text-3, #3a3c3d);
+
   /* title large */
   font-family: "Albert Sans";
   font-size: 32px;
   font-style: normal;
   font-weight: 600;
   line-height: normal;
-  color: #3a3c3d;
+
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
 }
 
 .subtitle {
-  /* body large */
   font-family: "Albert Sans";
   font-size: 16px;
   font-style: normal;
@@ -29,4 +51,28 @@
   padding-top: var(--Spacing-sm, 16px);
   padding-bottom: 28px;
   color: #3a3c3d;
+}
+
+.subheader {
+  font-family: "Albert Sans";
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 100%;
+  letter-spacing: 0%;
+
+  width: 656px;
+  height: 38px;
+}
+
+.spacing {
+  margin-top: 80px;
+}
+
+.page {
+  display: flex;
+  justify-content: center;
+  align-self: stretch;
+  background: var(--Neutral-Base-White, #fafafa);
+  min-height: 100vh;
+  width: 100%;
 }
