--- a/frontend/src/app/components/UnreadActivities.module.css
+++ b/frontend/src/app/components/UnreadActivities.module.css
@@ -44,6 +44,9 @@
 }
 
 .subtitle {
+  display: flex;
+  align-items: center;
+  gap: 8px;
   font-weight: 400;
   font-size: 13px;
   line-height: 15.6px;
