--- a/frontend/src/app/components/ChangeProgramDialog.module.css
+++ b/frontend/src/app/components/ChangeProgramDialog.module.css
@@ -59,8 +59,33 @@
   background-color: #f9fafb; /* hover:bg-gray-50 */
 }
 
-.checkbox {
+.checkboxContainer {
+  position: relative;
+  width: 20px;
+  height: 20px;
+  border-radius: 5px;
   margin-right: 0.5rem; /* mr-2 */
+}
+
+.checkbox {
+  width: 20px;
+  height: 20px;
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  -o-appearance: none;
+  border-radius: 3px;
+  border: 3px solid #057e6f;
+  display: inline-block;
+  position: relative;
+  cursor: pointer;
+}
+
+.checkmarkIcon {
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  cursor: pointer;
 }
 
 .actions {
@@ -70,16 +95,12 @@
 }
 
 .btnPrimary {
-  background-color: #3b82f6; /* blue-500 */
+  background-color: #057e6f;
   color: white;
   padding: 0.5rem 1rem; /* px-4 py-2 */
   border-radius: 0.375rem;
   border: none;
   cursor: pointer;
-}
-
-.btnPrimary:hover {
-  background-color: #2563eb; /* blue-600 */
 }
 
 .btnSecondary {
