--- a/frontend/src/app/components/ActivityDetail.module.css
+++ b/frontend/src/app/components/ActivityDetail.module.css
@@ -62,6 +62,19 @@
   align-items: center;
 }
 
+.assignmentInfo {
+  padding-top: 32px;
+  border-top: 1px solid #d0d7de;
+
+  font-family: "Albert Sans";
+  font-weight: 500;
+  font-style: normal;
+  font-size: 16px;
+  line-height: 100%;
+  letter-spacing: 0%;
+  color: #4d5358;
+}
+
 .profilePicture {
   display: flex;
   justify-content: center;
@@ -84,11 +97,11 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  gap: 8px;
+  gap: 12px;
 
   font-family: "Albert Sans";
   font-weight: 500;
-  font-style: Medium;
+  font-style: normal;
   font-size: 16px;
   line-height: 100%;
   letter-spacing: 0%;
@@ -112,6 +125,16 @@
   color: #0099ee;
 }
 
+.contactText {
+  font-family: "Albert Sans";
+  font-weight: 500;
+  font-style: normal;
+  font-size: 14px;
+  line-height: 100%;
+  letter-spacing: 0%;
+  color: #057e6f;
+}
+
 .contentText {
   font-family: "Albert Sans";
   font-weight: 500;
@@ -120,4 +143,22 @@
   line-height: 100%;
   letter-spacing: 0%;
   color: #4d5358;
+}
+
+.assignmentProfile {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  gap: 24px;
+}
+
+.viewProfile {
+  width: 78;
+  height: 41;
+  border-radius: 8px;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  gap: 10px;
+  opacity: 1;
+  cursor: pointer;
 }
