--- a/frontend/src/app/components/SuccessNotification.module.css
+++ b/frontend/src/app/components/SuccessNotification.module.css
@@ -1,15 +1,16 @@
 .notif {
-  position: absolute;
-  bottom: 10px;
-  right: 10px;
-  background-color: #057e6f;
-  color: white;
-
-  border-radius: 8px;
-  font-family: "Albert Sans";
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: normal;
-  padding: 16px;
+  display: flex;
+  padding: var(--Spacing-s, 8px) var(--Spacing-sm, 16px);
+  align-items: center;
+  gap: 10px;
+  border-radius: var(--Spacing-s, 8px);
+  border: 1px solid rgba(26, 133, 56, 0.2);
+  background: linear-gradient(0deg, rgba(26, 133, 56, 0.1) 0%, rgba(26, 133, 56, 0.1) 100%), #fafafa;
+  box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.1);
+  font-size: 14px;
+  color: var(--Success-Emphasis, #1a8538);
+  position: fixed;
+  bottom: 50px;
+  left: 50%;
+  transform: translateX(-50%);
 }
